--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/slim": "^3.9.1",
     "axios": "^1.10.0",
     "next": "15.5.9",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
